[tool.poetry]
name = "test-renovate"
version = "0.1.0"
description = ""
authors = ["Ricardo Madriz <richin13@gmail.com>"]
readme = "README.md"
packages = [{include = "test_renovate"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
