[tool.poetry]
name = "test-renovate"
version = "0.1.0"
description = ""
authors = ["Ricardo Madriz <richin13@gmail.com>"]
readme = "README.md"
packages = [{include = "test_renovate"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.28.1"


[tool.poetry.group.dev.dependencies]
Sphinx = "^5.3.0"
mypy = "^0.982"
isort = "^5.10.1"
pylint = "^2.15.4"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
